# CS165_Project

./: .gitignore  CMakeLists.txt  README.md  object_list.txt  tags
CMake/: FindLibreSSL.cmake
certificates/: Makefile  chain.pem  client.crt  client.key  server.crt  server.key
certificates/root/: index.txt
certificates/root/private/: ca.key.pem
proxy_files/: File_1  bye.txt
resources/server_files/: two
scripts/: add_local_libressl_libs_to_path.sh  reset.sh  setup.sh
server_files/: File_1  bye.txt  hello.txt  one  try.txt
solution/: CMakeLists.txt
solution/client_solution/: client.c
solution/server_solution/: server.c
src/: CMakeLists.txt  hello_world.cpp
src/client/: client.c
src/proxy/: proxy.c
src/server/: server.c
